# ada-mail

./: .gitignore  Makefile  Makefile.conf.in  README.md  configure  configure.ac  mailada.gpr.in  mailada_tests.gpr.in  mailada_tools.gpr.in
regtests/: mail-headers-tests.adb  mail-headers-tests.ads  mail-testsuite.adb  mail-testsuite.ads  mail_harness.adb
src/: mail-headers.adb  mail-headers.ads  mail-parsers.adb  mail-parsers.ads  mail.ads
tools/: mgrep-main.adb  mgrep-matcher.adb  mgrep-matcher.ads  mgrep-printer.adb  mgrep-printer.ads  mgrep-scanner.adb  mgrep-scanner.ads  mgrep.adb  mgrep.ads
